--- a/index.html
+++ b/index.html
@@ -26,11 +26,18 @@
             <label for="duree">Durée du prêt (années):</label>
             <input type="number" id="duree" name="duree" required>
 
+            <label for="loyer">Loyer mensuel (€):</label>
+            <input type="number" id="loyer" name="loyer" required>
+
+            <label for="duree-location">Durée de location (années):</label>
+            <input type="number" id="duree-location" name="duree-location" required>
+
             <button type="button" onclick="genererRapport()">Calculer</button>
         </form>
         <div id="resultat"></div>
     </div>
-    <script src="script.js"></script>
+    <!-- Inclusion de la bibliothèque jsPDF -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.3.1/jspdf.umd.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
