--- a/index.html
+++ b/index.html
@@ -15,22 +15,22 @@
         <h1>Calculette Projet Immobilier</h1>
         <form id="calculette-form">
             <label for="prix">Prix du bien (€):</label>
-            <input type="number" id="prix" name="prix" required>
+            <input type="number" id="prix" name="prix" value="300000" required>
 
             <label for="apport">Apport personnel (€):</label>
-            <input type="number" id="apport" name="apport" required>
+            <input type="number" id="apport" name="apport" value="0" required>
 
             <label for="taux">Taux d'intérêt (%):</label>
-            <input type="number" step="0.01" id="taux" name="taux" required>
+            <input type="number" step="0.01" id="taux" name="taux" value="1" required>
 
             <label for="duree">Durée du prêt (années):</label>
-            <input type="number" id="duree" name="duree" required>
+            <input type="number" id="duree" name="duree" value="20" required>
 
             <label for="loyer">Loyer mensuel (€):</label>
-            <input type="number" id="loyer" name="loyer" required>
+            <input type="number" id="loyer" name="loyer" value="0" required>
 
             <label for="duree-location">Durée de location (années):</label>
-            <input type="number" id="duree-location" name="duree-location" required>
+            <input type="number" id="duree-location" name="duree-location" value="0" required>
 
             <button type="button" onclick="genererRapport()">Calculer</button>
         </form>
