added favicon and home button that resets form

--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculette Projet Immobilier</title>
+    <!-- Favicon -->
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Calculette Projet Immobilier</h1>
+        <header>
+            <!-- Logo -->
+            <img src="logo.png" alt="Logo" class="logo" onclick="resetForm()">
+            <h1>Calculette Projet Immobilier</h1>
+        </header>
         <label class="switch">
             <input type="checkbox" id="dark-mode-toggle">
             <span class="slider round"></span>
