changed paths for favicon and logo

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculette Projet Immobilier</title>
     <link rel="stylesheet" href="styles.css">
-    <link id="favicon" rel="icon" href="favicon-light.ico" type="image/x-icon">
+    <link id="favicon" rel="icon" href=favicon.href type="image/x-icon">
 </head>
 <body>
     <div class="container">
         <div class="header">
-            <img src="logo-light.png" alt="Logo" id="logo" onclick="resetForm()">
+            <img src=logo.src alt="Logo" id="logo" onclick="resetForm()">
             <h1>Calculette Projet Immobilier</h1>
         </div>
         <label class="switch">
