took header out of container, put back class="logo"

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link id="favicon" rel="icon" href=favicon.href type="image/x-icon">
 </head>
 <body>
+    <header>
+        <img src=logo.src alt="Logo" class="logo" id="logo" onclick="resetForm()">
+        <h1>Calculette Projet Immobilier</h1>
+    </header>
     <div class="container">
-        <div class="header">
-            <img src=logo.src alt="Logo" id="logo" onclick="resetForm()">
-            <h1>Calculette Projet Immobilier</h1>
-        </div>
         <label class="switch">
             <input type="checkbox" id="dark-mode-toggle">
             <span class="slider round"></span>
