added help on form-restarter button

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img src=logo.src alt="Logo" class="logo" id="logo" onclick="resetForm()">
+        <img src=logo.src alt="Logo" class="logo" id="logo" onclick="resetForm()"><span class="help-text">Réinitialiser la simulation</span></img>
         <h1>Calculette Projet Immobilier</h1>
     </header>
     <div class="container">
