created logo-container for img and span

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <header>
-        <img src=logo.src alt="Logo" class="logo" id="logo" onclick="resetForm()"><span class="help-text">Réinitialiser la simulation</span></img>
+        <div class="logo-container">
+            <img src=logo.src alt="Logo" class="logo" id="logo" onclick="resetForm()">
+            <span class="logo-help">Réinitialiser le formulaire</span>
+        </div>
         <h1>Calculette Projet Immobilier</h1>
     </header>
     <div class="container">
