put back default favicon href and logo src

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculette Projet Immobilier</title>
     <link rel="stylesheet" href="styles.css">
-    <link id="favicon" rel="icon" href=favicon.href type="image/x-icon">
+    <link id="favicon" rel="icon" href="logos/favicon-light.ico" type="image/x-icon">
 </head>
 <body>
     <header>
         <div class="logo-container">
-            <img src=logo.src alt="Logo" class="logo" id="logo" onclick="resetForm()">
+            <img src="logos/logo-light.png" alt="Logo" class="logo" id="logo" onclick="resetForm()">
             <span class="logo-help">Réinitialiser le formulaire</span>
         </div>
         <h1>Calculette Projet Immobilier</h1>
