reformating calculer and pdf buttons

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </div>
             </div>
             
-            <button type="button" onclick="genererRapport()">Calculer</button>
+            <button type="button" id="calculer-button" onclick="genererRapport()">Calculer</button>
         </form>
         <div id="resultat"></div>
         <canvas id="myChart"></canvas>
