--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
         </form>
         <div id="resultat"></div>
         <canvas id="myChart"></canvas>
+        <div id="rapportBouton"></div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
