added return-to-github-repo button, maade graph more height

--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
 <body>
     <header>
         <div class="logo-container">
-            <img src="logos/logo-light.png" alt="Logo" class="logo" id="logo" onclick="resetForm()">
+            <img src="logos/home-logo-light.png" alt="Home logo" class="logo" id="home-logo" onclick="resetForm()">
             <span class="logo-help">Réinitialiser le formulaire</span>
         </div>
         <h1>Calculette Projet Immobilier</h1>
+        <a href="https://github.com/odysseu/python-app" target="_blank">
+            <img src="logos/github-logo-light.png" alt="GitHub logo" class="github-logo" id="github-logo">
+            <span class="logo-help">Aller au repository github</span>
+        </a>
     </header>
     <div class="container">
         <label class="switch">
