--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <link id="favicon" rel="icon" href="logos/favicon-light.ico" type="image/x-icon">
 </head>
 <body>
-    <header>
+    <header class="sticky-header">
         <div class="logo-container">
-            <img src="logos/home-logo-light.png" alt="Home logo" class="logo" id="home-logo" onclick="resetForm()">
+            <img src="logos/home-logo-light.png" alt="Home logo" class="header-logo" id="home-logo" onclick="resetForm()">
             <span class="logo-help">Réinitialiser le formulaire</span>
         </div>
         <h1>Calculette Projet Immobilier</h1>
         <a href="https://github.com/odysseu/python-app" target="_blank">
-            <img src="logos/github-logo-light.png" alt="GitHub logo" class="github-logo" id="github-logo">
+            <img src="logos/github-logo-light.png" alt="GitHub logo" class="header-logo" id="github-logo">
             <span class="logo-help">Aller au repository github</span>
         </a>
     </header>
