--- a/index.html
+++ b/index.html
@@ -9,19 +9,22 @@
 </head>
 <body>
     <header class="sticky-header">
-        <div class="logo-container">
-            <img src="logos/home-logo-light.png" alt="Home logo" class="header-logo" id="home-logo" onclick="resetForm()">
-            <span class="logo-help">Réinitialiser le formulaire</span>
+        <div class="header-left">
+            <div class="logo-container">
+                <img src="logos/logo-light.png" alt="Logo" class="header-logo" id="logo" onclick="resetForm()">
+                <span class="logo-help">Réinitialiser le formulaire</span>
+            </div>
         </div>
         <h1>Calculette Projet Immobilier</h1>
-        <a href="https://github.com/odysseu/python-app" target="_blank">
-            <img src="logos/github-logo-light.png" alt="GitHub logo" class="header-logo" id="github-logo">
-            <span class="logo-help">Aller au repository github</span>
-        </a>
-        <label class="switch">
-            <input type="checkbox" id="dark-mode-toggle">
-            <span class="slider round"></span>
-        </label>
+        <div class="header-right">
+            <a href="https://github.com/odysseu/python-app" target="_blank">
+                <img src="logos/github-logo.png" alt="GitHub Logo" class="github-logo">
+            </a>
+            <label class="switch">
+                <input type="checkbox" id="dark-mode-toggle">
+                <span class="slider round"></span>
+            </label>
+        </div>
     </header>
     <div class="container">
         <form id="calculette-form">
