switch relative to right-side header class

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="sticky-header">
         <div class="header-left">
             <div class="logo-container">
-                <img src="logos/logo-light.png" alt="Logo" class="header-logo" id="logo" onclick="resetForm()">
+                <img src="logos/home-logo-light.png" alt="Home Logo" class="header-logo" id="home-logo" onclick="resetForm()">
                 <span class="logo-help">Réinitialiser le formulaire</span>
             </div>
         </div>
