error missed the github-logo id; added tests so this never happens again

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1>Calculette Projet Immobilier</h1>
         <div class="header-right">
             <a href="https://github.com/odysseu/python-app" target="_blank">
-                <img src="logos/github-logo.png" alt="GitHub Logo" class="github-logo">
+                <img src="logos/github-logo.png" alt="GitHub Logo" class="github-logo" id="github-logo" >
             </a>
             <label class="switch">
                 <input type="checkbox" id="dark-mode-toggle">
