--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
         <div id="resultat"></div>
         <canvas id="myChart"></canvas>
         <div id="rapportBouton"></div>
+        <div id="telecharger-button"></div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jspdf-autotable@3.8.4/dist/jspdf.plugin.autotable.min.js"></script>
