css .container class was actually useful; added switch help

--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
         <div class="header-right">
             <a href="https://github.com/odysseu/python-app" target="_blank">
                 <img src="logos/github-logo-light.png" alt="GitHub Logo" class="github-logo" id="github-logo">
+                <span class="logo-help">Aller au projet github</span>
             </a>
             <label class="switch">
                 <input type="checkbox" id="dark-mode-toggle">
                 <span class="slider round"></span>
+                <span class="switch-help">Changer de mode</span>
             </label>
         </div>
     </header>
