--- a/index.html
+++ b/index.html
@@ -81,7 +81,9 @@
             <button type="button" id="calculer-button" onclick="genererRapport()">Calculer</button>
         </form>
         <div id="resultat"></div>
-        <canvas id="myChart"></canvas>
+        <div id="myChart-container">
+            <canvas id="myChart"></canvas>
+        </div>
         <div id="rapportBouton"></div>
         <div id="telecharger-button"></div>
     </div>
