ok almost alll translated

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <span class="slider round"></span>
                 <span class="switch-help">Changer de mode</span>
             </label>
-            <select id="language-select" onchange="changeLanguage()">
+            <select id="language-select">
                 <option value="fr">Français 🇫🇷</option>
                 <option value="en">English 🇬🇧</option>
             </select>
@@ -98,7 +98,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jspdf-autotable@3.8.4/dist/jspdf.plugin.autotable.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="script.js"></script>
     <script src="form-handler.js"></script>
     <script src="report-handler.js"></script>
     <script src="dark-mode.js"></script>
