--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculette Projet Immobilier</title>
+    <title id="titre">Calculette Projet Immobilier</title>
     <link rel="stylesheet" href="styles.css">
     <link id="favicon" rel="icon" href="logos/favicon-light.ico" type="image/x-icon">
 </head>
