added co-ownership fees

--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
 
                     <label for="commission">Commission agence (%): <span class="help-icon">? <span class="help-text">Pourcentage des frais d'agence.</span></span></label>
                     <input type="number" step="0.01" id="commission" name="commission" value="0" required>
+
+                    <label for="copropriete">Frais de copropriété: <span class="help-icon">? <span class="help-text">Frais de copropriété annuels.</span></span></label>
+                    <input type="number" step="0.01" id="copropriete" name="copropriete" value="0" required>
                 </div>
                 <div>
                     <h2 id="section-emprunt">Emprunt</h2>
