--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
                     <label for="taux">Taux d'intérêt (%): <span class="help-icon">? <span class="help-text">Taux d'intérêt annuel du prêt immobilier.</span></span></label>
                     <input type="number" step="0.01" id="taux" name="taux" value="1" required>
 
+                    <label for="taux">Assurance emprunteur (%): <span class="help-icon">? <span class="help-text">Pourcentage du prêt pour l'assurance emprunteur.</span></span></label>
+                    <input type="number" step="0.01" id="taux-assurance" name="taux-assurance" value="0" required>
+
                     <label for="duree-pret">Durée du prêt (années): <span class="help-icon">? <span class="help-text">Durée totale du prêt en années.</span></span></label>
                     <input type="number" id="duree-pret" name="duree-pret" value="20" required>
                 </div>
